# rFilet

./: Cargo.toml  README.md
src/: cli_routes.rs  cli_state.rs  cli_ws.rs  main.rs  routes.rs  state.rs  static_assets.rs  ws.rs
static/: cli_receiver.html  receiver.html  sender.html
