[package]
name = "filetransfer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
nanoid = "0.4"
futures-util = { version = "0.3.31", features = ["sink"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
